// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`veTable header filter render filter custom icon 1`] = `
<div class="ve-table">
  <div class="ve-table-container ve-table-border-around">
    <table class="ve-table-content ve-table-border-x">
      <colgroup>
        <col style="width: 15%;">
        <col style="width: 15%;">
        <col style="width: 30%;">
        <col style="width: 40%;">
      </colgroup>
      <thead class="ve-table-fixed-header ve-table-header">
        <tr class="ve-table-header-tr">
          <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: left; top: 0px;">Name</th>
          <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: left; top: 0px;">Date<dl class="ve-dropdown">
              <dt class="ve-dropdown-dt"><a class="" style="width: 90px;"><span class="ve-table-filter"><span class="ve-table-filter-icon"><i class="ve-icon iconfont-vet icon-vet-search"></i></span></span></a></dt>
              <dd class="ve-dropdown-dd">
                <ul class="ve-dropdown-items" style="min-width: 90px; max-width: Infinitypx; top: 12px; left: 0px;">
                  <div>
                    <div class="ve-dropdown-items-warpper" style="max-height: 1000px;">
                      <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input type="radio" class="ve-radio-input" value=""><span class="ve-radio-inner"></span></span><span class="ve-radio-label">1900-05-20</span></label></a></li>
                      <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input type="radio" class="ve-radio-input" value=""><span class="ve-radio-inner"></span></span><span class="ve-radio-label">1910-06-20</span></label></a></li>
                      <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input type="radio" class="ve-radio-input" value=""><span class="ve-radio-inner"></span></span><span class="ve-radio-label">2000-07-20</span></label></a></li>
                      <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input type="radio" class="ve-radio-input" value=""><span class="ve-radio-inner"></span></span><span class="ve-radio-label">2010-08-20</span></label></a></li>
                      <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input type="radio" class="ve-radio-input" value=""><span class="ve-radio-inner"></span></span><span class="ve-radio-label">2020-09-20</span></label></a></li>
                    </div>
                    <li class="ve-dropdown-operation"><a href="javascript:void(0)" class="ve-dropdown-operation-item ve-dropdown-filter-disable">Reset</a><a href="javascript:void(0)" class="ve-dropdown-operation-item">Confirm</a></li>
                  </div>
                </ul>
              </dd>
            </dl>
          </th>
          <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: center; top: 0px;">Hobby</th>
          <th rowspan="1" colspan="1" class="ve-table-header-th ve-table-last-column" style="text-align: left; top: 0px;">Address</th>
        </tr>
      </thead>
      <tbody class="ve-table-body ve-table-row-hover ve-table-row-highlight">
        <tr style="height: 0px;">
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
        </tr>
        <tr row-key="0" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">John</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">1900-05-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Shanghai</td>
        </tr>
        <tr row-key="1" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Dickerson</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">1910-06-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Beijing</td>
        </tr>
        <tr row-key="2" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Larsen</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">2000-07-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Chongqing</td>
        </tr>
        <tr row-key="3" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Geneva</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">2010-08-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Xiamen</td>
        </tr>
        <tr row-key="4" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Jami</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">2020-09-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Shenzhen</td>
        </tr>
      </tbody>
      <tfoot class="ve-table-fixed-footer ve-table-footer"></tfoot>
    </table>
  </div>
</div>
`;

exports[`veTable header filter render multiple filter 1`] = `
<div class="ve-table">
  <div class="ve-table-container ve-table-border-around">
    <table class="ve-table-content ve-table-border-x">
      <colgroup>
        <col style="width: 15%;">
        <col style="width: 15%;">
        <col style="width: 30%;">
        <col style="width: 40%;">
      </colgroup>
      <thead class="ve-table-fixed-header ve-table-header">
        <tr class="ve-table-header-tr">
          <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: left; top: 0px;">Name<dl class="ve-dropdown">
              <dt class="ve-dropdown-dt"><a class="" style="width: 90px;"><span class="ve-table-filter"><span class="ve-table-filter-icon"><i class="ve-icon iconfont-vet icon-vet-filter"></i></span></span></a></dt>
              <dd class="ve-dropdown-dd">
                <ul class="ve-dropdown-items" style="min-width: 90px; max-width: Infinitypx; top: 12px; left: 0px;">
                  <div>
                    <div class="ve-dropdown-items-warpper" style="max-height: 120px;">
                      <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content ve-checkbox-checked"><input type="checkbox" class="ve-checkbox-input" value="John"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">John</span></label></li>
                      <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content"><input type="checkbox" class="ve-checkbox-input" value="Dickerson"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">Dickerson</span></label></li>
                      <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content"><input type="checkbox" class="ve-checkbox-input" value="Larsen"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">Larsen</span></label></li>
                      <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content"><input type="checkbox" class="ve-checkbox-input" value="Geneva"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">Geneva</span></label></li>
                      <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content"><input type="checkbox" class="ve-checkbox-input" value="Jami"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">Jami</span></label></li>
                    </div>
                    <li class="ve-dropdown-operation"><a href="javascript:void(0)" class="ve-dropdown-operation-item">Reset</a><a href="javascript:void(0)" class="ve-dropdown-operation-item">Confirm</a></li>
                  </div>
                </ul>
              </dd>
            </dl>
          </th>
          <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: left; top: 0px;">Date</th>
          <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: center; top: 0px;">Hobby</th>
          <th rowspan="1" colspan="1" class="ve-table-header-th ve-table-last-column" style="text-align: left; top: 0px;">Address</th>
        </tr>
      </thead>
      <tbody class="ve-table-body ve-table-row-hover ve-table-row-highlight">
        <tr style="height: 0px;">
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
        </tr>
        <tr row-key="0" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">John</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">1900-05-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Shanghai</td>
        </tr>
        <tr row-key="1" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Dickerson</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">1910-06-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Beijing</td>
        </tr>
        <tr row-key="2" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Larsen</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">2000-07-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Chongqing</td>
        </tr>
        <tr row-key="3" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Geneva</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">2010-08-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Xiamen</td>
        </tr>
        <tr row-key="4" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Jami</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">2020-09-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Shenzhen</td>
        </tr>
      </tbody>
      <tfoot class="ve-table-fixed-footer ve-table-footer"></tfoot>
    </table>
  </div>
</div>
`;

exports[`veTable header filter render single filter 1`] = `
<div class="ve-table">
  <div class="ve-table-container ve-table-border-around">
    <table class="ve-table-content ve-table-border-x">
      <colgroup>
        <col style="width: 15%;">
        <col style="width: 15%;">
        <col style="width: 30%;">
        <col style="width: 40%;">
      </colgroup>
      <thead class="ve-table-fixed-header ve-table-header">
        <tr class="ve-table-header-tr">
          <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: left; top: 0px;">Name</th>
          <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: left; top: 0px;">Date<dl class="ve-dropdown">
              <dt class="ve-dropdown-dt"><a class="" style="width: 90px;"><span class="ve-table-filter"><span class="ve-table-filter-icon"><i class="ve-icon iconfont-vet icon-vet-filter"></i></span></span></a></dt>
              <dd class="ve-dropdown-dd">
                <ul class="ve-dropdown-items" style="min-width: 90px; max-width: Infinitypx; top: 12px; left: 0px;">
                  <div>
                    <div class="ve-dropdown-items-warpper" style="max-height: 1000px;">
                      <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input type="radio" class="ve-radio-input" value=""><span class="ve-radio-inner"></span></span><span class="ve-radio-label">1900-05-20</span></label></a></li>
                      <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input type="radio" class="ve-radio-input" value=""><span class="ve-radio-inner"></span></span><span class="ve-radio-label">1910-06-20</span></label></a></li>
                      <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input type="radio" class="ve-radio-input" value=""><span class="ve-radio-inner"></span></span><span class="ve-radio-label">2000-07-20</span></label></a></li>
                      <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input type="radio" class="ve-radio-input" value=""><span class="ve-radio-inner"></span></span><span class="ve-radio-label">2010-08-20</span></label></a></li>
                      <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input type="radio" class="ve-radio-input" value=""><span class="ve-radio-inner"></span></span><span class="ve-radio-label">2020-09-20</span></label></a></li>
                    </div>
                    <li class="ve-dropdown-operation"><a href="javascript:void(0)" class="ve-dropdown-operation-item ve-dropdown-filter-disable">Reset</a><a href="javascript:void(0)" class="ve-dropdown-operation-item">Confirm</a></li>
                  </div>
                </ul>
              </dd>
            </dl>
          </th>
          <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: center; top: 0px;">Hobby</th>
          <th rowspan="1" colspan="1" class="ve-table-header-th ve-table-last-column" style="text-align: left; top: 0px;">Address</th>
        </tr>
      </thead>
      <tbody class="ve-table-body ve-table-row-hover ve-table-row-highlight">
        <tr style="height: 0px;">
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
          <td style="padding: 0px; border: 0px; height: 0px;"></td>
        </tr>
        <tr row-key="0" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">John</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">1900-05-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Shanghai</td>
        </tr>
        <tr row-key="1" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Dickerson</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">1910-06-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Beijing</td>
        </tr>
        <tr row-key="2" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Larsen</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">2000-07-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Chongqing</td>
        </tr>
        <tr row-key="3" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Geneva</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">2010-08-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Xiamen</td>
        </tr>
        <tr row-key="4" class="ve-table-body-tr">
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">Jami</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">2020-09-20</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: center;">coding and coding repeat</td>
          <td rowspan="1" colspan="1" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Shenzhen</td>
        </tr>
      </tbody>
      <tfoot class="ve-table-fixed-footer ve-table-footer"></tfoot>
    </table>
  </div>
</div>
`;
